# MyPocket

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: tailwind.css
mypocket/: main.py  scheduler.py
mypocket/core/: config.py  db.py  templating.py  utils.py
mypocket/domain/: analytics.py  categorize.py  models.py
mypocket/integrations/: _oauth1.py  etrade.py  etrade_sync.py  teller.py  teller_sync.py
mypocket/routes/: api.py  auth.py  etrade.py  pages.py  teller.py
mypocket/security/: __init__.py  crypto.py  headers.py  keys.py  middleware.py  passcode.py  rate_limit.py  redirects.py  session.py  sqltypes.py
mypocket/static/: manifest.webmanifest  styles.css
mypocket/templates/: _macros.html  auth_base.html  banking.html  banking_account.html  base.html  brokerage.html  brokerage_account.html  connect.html  login.html  overview.html  setup.html  spending.html  transactions.html
scripts/: build-css.sh
