[project]
name = "mypocket"
version = "0.1.0"
description = "Local personal finance dashboard for Citi + E*TRADE"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "keyring>=25.4",
    "cryptography>=43.0",
    "python-multipart>=0.0.12",  # needed by FastAPI Form() in /login + /setup
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mypocket"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [".venv", "data", "teller"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() default args trigger this
    "SIM108", # ternary if-else not always clearer
]

[tool.ruff.lint.isort]
known-first-party = ["mypocket"]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
